--- a/core/templates/store/store_list.html
+++ b/core/templates/store/store_list.html
@@ -262,7 +262,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="page-title">متاجر الأزياء</h1>
-                <p class="page-subtitle">أحدث صيحات الموضة من أفضل المتاجر • الخدمة متاحة في بغداد فقط الآن</p>
+                <p class="page-subtitle">أحدث صيحات الموضة من أفضل المتاجر • الخدمة متاحة في جميع محافظات العراق</p>
             </div>
         </div>
     </div>
