--- a/core/templates/dashboard/super_owner/settings.html
+++ b/core/templates/dashboard/super_owner/settings.html
@@ -64,13 +64,13 @@
                                 </h5>
                                 
                                 <div class="mb-3">
-                                    <label for="delivery_fee" class="form-label">رسوم التوصيل (ريال) *</label>
+                                    <label for="delivery_fee" class="form-label">رسوم التوصيل (دينار) *</label>
                                     <input type="number" class="form-control" id="delivery_fee" name="delivery_fee" 
                                            value="{{ settings.delivery_fee }}" min="0" step="0.01" required>
                                 </div>
                                 
                                 <div class="mb-3">
-                                    <label for="free_delivery_threshold" class="form-label">الحد الأدنى للتوصيل المجاني (ريال) *</label>
+                                    <label for="free_delivery_threshold" class="form-label">الحد الأدنى للتوصيل المجاني (دينار) *</label>
                                     <input type="number" class="form-control" id="free_delivery_threshold" name="free_delivery_threshold" 
                                            value="{{ settings.free_delivery_threshold }}" min="0" step="0.01" required>
                                 </div>
